# ROBOCOP

./: .gitignore  GUIA_DE_USO.md  HARDWARE_CONFIG.md  PROJETO_COMPLETO.md  README.md  install_dependencies.sh  setup_ros2.sh
scripts/: autostart.sh  create_desktop_shortcuts.sh
src/tortoisebot_bringup/: CMakeLists.txt  package.xml
src/tortoisebot_bringup/config/: cartographer.lua  nav2_params.yaml
src/tortoisebot_bringup/launch/: bringup.launch.py  navigation.launch.py
src/tortoisebot_bringup/maps/: empty_map.yaml
src/tortoisebot_camera/: package.xml  setup.py
src/tortoisebot_camera/config/: camera_config.yaml
src/tortoisebot_camera/launch/: camera.launch.py
src/tortoisebot_camera/tortoisebot_camera/: camera_calibration.py  camera_node.py
src/tortoisebot_description/: CMakeLists.txt  package.xml
src/tortoisebot_description/launch/: display.launch.py
src/tortoisebot_description/rviz/: tortoisebot_display.rviz
src/tortoisebot_description/urdf/: materials.xacro  sensors.xacro  tortoisebot.xacro
src/tortoisebot_firmware/: package.xml  setup.py
src/tortoisebot_firmware/tortoisebot_firmware/: __init__.py  differential_drive.py  ultrasonic_sensor.py
src/tortoisebot_status/: package.xml  setup.py
src/tortoisebot_status/config/: status_config.yaml
src/tortoisebot_status/launch/: status.launch.py
src/tortoisebot_status/tortoisebot_status/: battery_monitor.py  system_monitor.py
src/ydlidar_ros2_driver/: CMakeLists.txt  package.xml
src/ydlidar_ros2_driver/launch/: ydlidar_launch.py
src/ydlidar_ros2_driver/params/: ydlidar.yaml
src/ydlidar_ros2_driver/src/: placeholder_node.cpp
