<?xml version="1.0"?>
<package format="3">
  <name>tortoisebot_bringup</name>
  <version>2.0.0</version>
  <description>Launch files principais para TortoiseBot</description>
  
  <maintainer email="seu-email@exemplo.com">Seu Nome</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>tortoisebot_description</exec_depend>
  <exec_depend>tortoisebot_firmware</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
