<?xml version="1.0"?>
<package format="3">
  <name>tortoisebot_description</name>
  <version>2.0.0</version>
  <description>Descrição URDF do TortoiseBot personalizado</description>
  
  <maintainer email="seu-email@exemplo.com">Seu Nome</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
