<?xml version="1.0"?>
<package format="3">
  <name>tortoisebot_firmware</name>
  <version>2.0.0</version>
  <description>Controle de hardware para TortoiseBot (motores, sensores)</description>
  
  <maintainer email="seu-email@exemplo.com">Seu Nome</maintainer>
  <license>Apache-2.0</license>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
