<?xml version="1.0"?>
<package format="3">
  <name>ydlidar_ros2_driver</name>
  <version>1.0.1</version>
  <description>Driver ROS2 para YDLiDAR A1M8</description>
  
  <maintainer email="seu-email@exemplo.com">Seu Nome</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
